--- a/po/ChangeLog
+++ b/po/ChangeLog
@@ -1,3 +1,7 @@
+2005-08-09  Hendrik Brandt  <heb@gnome-de.org>
+
+	* de.po: Bugfixes.
+
 2005-08-07  Mohammad DAMT  <mdamt@gnome.org>
 
 	* id.po: Updated Indonesian translation
