--- a/po/de.po
+++ b/po/de.po
@@ -15,7 +15,7 @@ msgstr ""
 "Project-Id-Version: GTK+ HEAD\n"
 "Report-Msgid-Bugs-To: \n"
 "POT-Creation-Date: 2005-08-04 13:28+0200\n"
-"PO-Revision-Date: 2005-08-04 13:28+0200\n"
+"PO-Revision-Date: 2005-08-09 23:50+0200\n"
 "Last-Translator: Hendrik Brandt <heb@gnome-de.org>\n"
 "Language-Team: German <gnome-de@gnome.org>\n"
 "MIME-Version: 1.0\n"
@@ -2173,42 +2173,42 @@ msgstr "Vollbild _beibehalten"
 #. translators, strip the prefix up to and including the first |
 #: ../gtk/gtkstock.c:336
 msgid "Navigation|_Bottom"
-msgstr "Navigation|_Unten"
+msgstr "_Unten"
 
 #. translators, strip the prefix up to and including the first |
 #: ../gtk/gtkstock.c:338
 msgid "Navigation|_First"
-msgstr "Navigation|_Erster"
+msgstr "_Erster"
 
 #. translators, strip the prefix up to and including the first |
 #: ../gtk/gtkstock.c:340
 msgid "Navigation|_Last"
-msgstr "Navigation|_Letzter"
+msgstr "_Letzter"
 
 #. translators, strip the prefix up to and including the first |
 #: ../gtk/gtkstock.c:342
 msgid "Navigation|_Top"
-msgstr "Navigation|_Oben"
+msgstr "_Oben"
 
 #. translators, strip the prefix up to and including the first |
 #: ../gtk/gtkstock.c:344
 msgid "Navigation|_Back"
-msgstr "Navigation|_Zurück"
+msgstr "_Zurück"
 
 #. translators, strip the prefix up to and including the first |
 #: ../gtk/gtkstock.c:346
 msgid "Navigation|_Down"
-msgstr "Navigation|_Runter"
+msgstr "_Runter"
 
 #. translators, strip the prefix up to and including the first |
 #: ../gtk/gtkstock.c:348
 msgid "Navigation|_Forward"
-msgstr "Navigation|_Vor"
+msgstr "_Vor"
 
 #. translators, strip the prefix up to and including the first |
 #: ../gtk/gtkstock.c:350
 msgid "Navigation|_Up"
-msgstr "Navigation|_Hoch"
+msgstr "_Hoch"
 
 #: ../gtk/gtkstock.c:351
 msgid "_Harddisk"
