Updated Welsh translation.
2005-08-09  Rhys Jones  <rhys@sucs.org>

	* cy.po: Updated Welsh translation.

--- a/po-properties/ChangeLog
+++ b/po-properties/ChangeLog
@@ -1,3 +1,7 @@
+2005-08-09  Rhys Jones  <rhys@sucs.org>
+
+	* cy.po: Updated Welsh translation.
+
 2005-08-07  Mohammad DAMT  <mdamt@gnome.org>
 
 	* id.po: Updated Indonesian translation
