--- a/po/ChangeLog
+++ b/po/ChangeLog
@@ -1,3 +1,7 @@
+2005-08-09  Rhys Jones  <rhys@sucs.org>
+
+	* cy.po: Updated Welsh translation.
+
 2005-08-09  Hendrik Brandt  <heb@gnome-de.org>
 
 	* de.po: Bugfixes.
