--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,18 @@
+2005-08-09  Owen Taylor  <otaylor@redhat.com>
+
+	* configure.in: Strip out all Xft, FreeType, and pangoxft checking.
+	Rewrite X checks to use pkg-config as much as possible.
+
+	* gdk/win32/gdkfont-win32.c (gdk_font_from_description_for_display): Make
+	this return Arial always to avoid using PangoWin32FontMap. (X11 backend
+	has always been returned "fixed" for a long time)
+
+	* gdk/linux-fb/gdkdrawable-fb2.c: Remove draw_glyphs() implementations,
+	fall through to the default implementation in terms of Cairo.
+
+	* gdk/linux-fb/gdkdrawable-fb2.c (gdk_fb_draw_text): Use gdk_draw_glyphs()
+	on the wrapper rather than gdk_fb_draw_glyphs().
+
 2005-08-09  Mark McLoughlin  <mark@skynet.ie>
 
 	Fixes "notification area leaks space" (bug #312687)
