Updated Norwegian bokmål translation. Same.
2005-08-12  Terance Sola  <terance@lyse.net>

	* nb.po: Updated Norwegian bokmål translation.
	* no.po: Same.

--- a/po-properties/ChangeLog
+++ b/po-properties/ChangeLog
@@ -1,3 +1,8 @@
+2005-08-12  Terance Sola  <terance@lyse.net>
+
+	* nb.po: Updated Norwegian bokmål translation.
+	* no.po: Same.
+
 2005-08-09  Rhys Jones  <rhys@sucs.org>
 
 	* cy.po: Updated Welsh translation.
