--- a/po/ChangeLog
+++ b/po/ChangeLog
@@ -1,3 +1,7 @@
+2005-08-12  Chao-Hsiung Liao  <j_h_liau@yahoo.com.tw>
+
+	* zh_TW.po: Updated Traditional Chinese translation.
+
 2005-08-09  Rhys Jones  <rhys@sucs.org>
 
 	* cy.po: Updated Welsh translation.
