--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,7 @@
+2005-08-12  Matthias Clasen  <mclasen@redhat.com>
+
+	* configure.in: Bump version to 2.8.0
+
 2005-08-11  Matthias Clasen  <mclasen@redhat.com>
 
 	* gtk/gtkfilechooserdefault.c: Work around some problems
