--- a/docs/reference/ChangeLog
+++ b/docs/reference/ChangeLog
@@ -1,3 +1,10 @@
+2005-08-12  Matthias Clasen  <mclasen@redhat.com>
+
+	* gdk-pixbuf/tmpl/scaling.sgml: Remove a
+	confusing gdk_window_set_back_pixmap() call
+	from the example, pointed out by Owen
+	Taylor.
+
 2005-08-11  Matthias Clasen  <mclasen@redhat.com>
 
 	* gtk/building.sgml: Updates.
