--- a/po/ChangeLog
+++ b/po/ChangeLog
@@ -1,3 +1,7 @@
+2005-08-13  Mohammad DAMT  <mdamt@gnome.org>
+
+	* id.po: Updated Indonesian translation
+
 2005-08-12  Kostas Papadimas <pkst@gnome.org>
 
 	* el.po: Updated  Greek translation.
