--- a/po/ChangeLog
+++ b/po/ChangeLog
@@ -1,3 +1,7 @@
+2005-08-13  Vincent van Adrighem  <adrighem@gnome.org>
+
+	* nl.po: Translation updated by Tino Meinen.
+
 2005-08-13  Mohammad DAMT  <mdamt@gnome.org>
 
 	* id.po: Updated Indonesian translation
