--- a/po/ChangeLog
+++ b/po/ChangeLog
@@ -1,3 +1,7 @@
+2005-08-15  Gabor Kelemen  <kelemeng@gnome.hu>
+
+	* hu.po: Hungarian translation updated.
+
 2005-08-13  Matthias Clasen  <mclasen@redhat.com>
 
 	* === Released 2.8.0 ===
