--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,11 @@
+2005-08-15  Owen Taylor  <otaylor@redhat.com>
+
+	* gdk/linux-fb/gdkwindow-fb.c (gdk_window_set_back_pixmap): 
+	* gdk/win32/gdkwindow-win32.c (gdk_window_set_back_pixmap): 
+	* gdk/x11/gdkwindow-x11.c (gdk_window_set_back_pixmap):
+	Handle pixmap == NULL when checking for a colormap.
+	(Allin Cottrell).
+
 2005-08-14  Matthias Clasen  <mclasen@redhat.com>
 
 	* gtk/updateiconcache.c: Store only one copy of the pixel data
