--- a/po/ChangeLog
+++ b/po/ChangeLog
@@ -1,3 +1,7 @@
+2005-08-16  Francisco Javier F. Serrador  <serrador@cvs.gnome.org>
+
+	* es.po: Updated Spanish translation.
+
 2005-08-15  Maxim Dziumanenko <mvd@mylinux.ua>
 
 	* uk.po: Updated Ukrainian translation.
