--- a/docs/reference/ChangeLog
+++ b/docs/reference/ChangeLog
@@ -1,3 +1,8 @@
+2005-08-16  Matthias Clasen  <mclasen@redhat.com>
+
+	* gtk/tmpl/gtktreemodel.sgml: Fix an 
+	example.  (#313595, Olexiy Avramchenko)
+
 2005-08-13  Matthias Clasen  <mclasen@redhat.com>
 
 	* === Released 2.8.0 ===
