--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,8 @@
+2005-08-17  Matthias Clasen  <mclasen@redhat.com>
+
+	* gtk/gtkmenu.c (gtk_menu_grab_notify): Complete the 
+	backported fix.  
+
 2005-08-15  Matthias Clasen  <mclasen@redhat.com>
 
 	Backported fixes from 2.8:
