Fixed Lithuanian translation.
2005-08-23  Žygimantas Beručka  <zygis@gnome.org>

        * lt.po: Fixed Lithuanian translation.

--- a/po/ChangeLog
+++ b/po/ChangeLog
@@ -1,3 +1,7 @@
+2005-08-23  Žygimantas Beručka  <zygis@gnome.org>
+
+	* lt.po: Fixed Lithuanian translation.
+
 2005-08-22  Changwoo Ryu  <cwryu@debian.org>
 
 	* ko.po: Updated Korean translation.
